2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: add $ Id $ line.
	* buspirate.h: add $ Id $ line.

2010-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix a few warnings that came up recently (some of them only triggered
	by recent GCC versions).
	* config_gram.y (parse_cmdbits): "brkt possibly used uninitialized"
	(GCC errs here)
	* jtagmkII.c (jtagmkII_reset32): "status possibly used uninitialized"
	(I think GCC errs, too)
	* buspirate.c: "pointers differ in signedness" (mismatch between
	string processing and the use of "unsigned char" throughought the
	AVRDUDE API)

2010-01-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_smc_init32): replace sleep() by usleep() for
	win32 compatibility.

2009-11-09  David Hoerl <dhoerl@mac.com>

	* fileio.c: ihex2bin did not properly handle files > 64K bytes
	* usb_libusb.c: re-enabled usb_reset for Macs (no reset causes lots of failures)
	* avrdude.1: spacing issue for avr32 fixed.

2009-11-09  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Implemented reset= and speed= extended parameters.
	* avrdude.1: Document the change.

2009-11-04  Michal Ludvig  <mludvig@logix.net.nz>

	* configure.ac, Makefile.am: Test if GCC accepts -Wno-pointer-sign

2009-11-04  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Implemented 'BinMode' support for
	  firmware 2.7 and higher.
	* avrdude.1: Added info about BusPirate.

2009-11-03  Michal Ludvig  <mludvig@logix.net.nz>

	* arduino.c: Add on to bug #26703 / patch #6866 - clear DTR/RTS
	  when closing the port.
	* Makefile.am: Silent warnings about signedness - they're useless
	  and annoying, especially for 'char' vars.

2009-10-22  David Hoerl <dhoerl@mac.com>

	* usb_libusb.c: disabled usb_reset for Macs (same as FreeBSD)

2009-10-12  Michal Ludvig  <mludvig@logix.net.nz>

	* main.c: Re-added default to serial port for BusPirate.

2009-10-12  David Hoerl <dhoerl@mac.com>
